# PW_SFDC

./: .gitignore  auth.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  sample_attachment.txt  test_SFDC_leads.py
.github/workflows/: secret-scan.yml  test.yml
models/: data.py  leads.py
src/api/: http_client.py
src/api/contracts/: jsonschema_helpers.py  schemas.py
src/auth/: salesforce.py
src/pw_sfdc_qa_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sfdc/: helpers.py  lead_api.py  soql.py
src/test_data/: lead_data.py
tests/: conftest.py  test_SFDC_leads.py
tests_api/: conftest.py  test_sfdc_create_lead.py  test_sfdc_delete_lead.py  test_sfdc_lead_contract.py  test_sfdc_limits.py
ui_pages/: common.py  leads.py
